src/test/resources/bad/custom/001-no-function-printStr.lat
void main() {
    printStr("WRONG!");
    return;
}